# cargo-bump-deps

./: Cargo.toml  README.md
src/: cargo_cmd.rs  cli.rs  discovery.rs  git.rs  lib.rs  main.rs  manifest.rs  parser.rs  runner.rs  state.rs  upgrade.rs
tests/: git_ops.rs  upgrade_loop.rs
tests/common/: mod.rs
