[package]
name = "cargo-bump-deps"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Lurk/cargo-bump-deps.git"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
semver = "1.0.27"
colored = "3.1.1"
cargo_metadata = "0.23.1"
crates_io_api = "0.12.0"
toml_edit = "0.25.4+spec-1.1.0"

[dev-dependencies]
tempfile = "3.27.0"
