[package]
name = "cargo-bump-deps"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Lurk/cargo-bump-deps.git"

[lib]
name = "cargo_bump_deps"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
semver = "1.0.28"
colored = "3.1.1"
cargo_metadata = "0.23.1"
crates_io_api = "0.12.0"
toml_edit = "0.25.11"

[dev-dependencies]
tempfile = "3.27.0"
